Updated HandBrake core to 1.10.1

--- a/VidCoder/View/Panels/VideoPanel.xaml
+++ b/VidCoder/View/Panels/VideoPanel.xaml
@@ -41,7 +41,7 @@
 				<Grid Visibility="{Binding HasSourceData, Converter={StaticResource VisibilityConverter}}">
 					<Border
 						MinWidth="230"
-						Margin="10 3 0 6"
+						Margin="10,3,0,6"
 						HorizontalAlignment="Left"
 						VerticalAlignment="Top"
 						Background="{DynamicResource InputBrush}"
@@ -55,7 +55,7 @@
 							<TextBlock
 								Grid.Column="0"
 								Height="21"
-								Margin="2 0 10 0"
+								Margin="2,0,10,0"
 								HorizontalAlignment="Left"
 								VerticalAlignment="Top"
 								Style="{StaticResource SectionHeader}"
@@ -104,13 +104,13 @@
 				<!--  Main settings  -->
 				<Grid Row="1">
 					<TextBlock
-						Margin="7 4 0 0"
+						Margin="7,4,0,0"
 						HorizontalAlignment="Left"
 						VerticalAlignment="Top"
 						Style="{StaticResource SectionHeader}"
 						Text="{x:Static res:EncodingRes.Video}" />
 					<Grid
-						Margin="16 22 0 0"
+						Margin="16,22,0,0"
 						HorizontalAlignment="Left"
 						VerticalAlignment="Top">
 						<Grid.RowDefinitions>
@@ -135,7 +135,7 @@
 							Grid.Column="1"
 							Height="23"
 							MinWidth="122"
-							Margin="5 2 0 2"
+							Margin="5,2,0,2"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							VerticalContentAlignment="Center"
@@ -154,7 +154,7 @@
 							Grid.Column="1"
 							Height="23"
 							MinWidth="122"
-							Margin="5 2 0 4"
+							Margin="5,2,0,4"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							VerticalContentAlignment="Center"
@@ -171,7 +171,7 @@
 							Grid.Row="2"
 							Grid.Column="1"
 							Height="16"
-							Margin="5 0 0 7"
+							Margin="5,0,0,7"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							Content="{x:Static res:EncodingRes.ConstantFramerateRadioButton}"
@@ -184,13 +184,12 @@
 						<RadioButton
 							Grid.Row="3"
 							Grid.Column="1"
-							Margin="5 0 0 7"
+							Margin="5,0,0,7"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							Content="{Binding VfrChoiceText}"
 							GroupName="constantFramerate2"
-							IsChecked="{Binding ConstantFramerate,
-							                    Converter={StaticResource InverseBoolConverter}}">
+							IsChecked="{Binding ConstantFramerate, Converter={StaticResource InverseBoolConverter}}">
 							<RadioButton.ToolTip>
 								<TextBlock Style="{StaticResource LongToolTip}" Text="{Binding VariableFramerateToolTip}" />
 							</RadioButton.ToolTip>
@@ -202,13 +201,13 @@
 			<!--  Quality  -->
 			<Grid Grid.Column="1">
 				<TextBlock
-					Margin="10 4 0 0"
+					Margin="10,4,0,0"
 					HorizontalAlignment="Left"
 					VerticalAlignment="Top"
 					Style="{StaticResource SectionHeader}"
 					Text="{x:Static res:EncodingRes.Quality}" />
 				<Grid
-					Margin="20 22 0 0"
+					Margin="20,22,0,0"
 					HorizontalAlignment="Left"
 					VerticalAlignment="Top">
 					<Grid.ColumnDefinitions>
@@ -233,30 +232,23 @@
 							VerticalAlignment="Center"
 							Content="{x:Static res:EncodingRes.TargetSizeRadioButton}"
 							GroupName="VideoQuality"
-							IsChecked="{Binding VideoEncodeRateType,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:VCVideoEncodeRateType.TargetSize}}" />
+							IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.TargetSize}}" />
 						<controls:NumberBox
 							Grid.Row="0"
 							Grid.Column="1"
 							Width="62"
 							Height="23"
-							Margin="8 0 0 0"
+							Margin="8,0,0,0"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Center"
 							AllowEmpty="False"
 							AutomationProperties.Name="{x:Static res:EncodingRes.TargetSizeRadioButton}"
-							IsEnabled="{Binding VideoEncodeRateType,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:VCVideoEncodeRateType.TargetSize}}"
+							IsEnabled="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.TargetSize}}"
 							Minimum="0"
 							Modulus="0.1"
-							Number="{Binding TargetSize,
-							                 Mode=TwoWay}"
+							Number="{Binding TargetSize, Mode=TwoWay}"
 							ShowIncrementButtons="False"
-							Visibility="{Binding VideoEncodeRateType,
-							                     Converter={StaticResource EnumVisibilityInverseConverter},
-							                     ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
+							Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityInverseConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
 
 						<RadioButton
 							Grid.Row="1"
@@ -266,29 +258,22 @@
 							VerticalAlignment="Center"
 							Content="{x:Static res:EncodingRes.AverageBitrateRadioButton}"
 							GroupName="VideoQuality"
-							IsChecked="{Binding VideoEncodeRateType,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:VCVideoEncodeRateType.AverageBitrate}}" />
+							IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.AverageBitrate}}" />
 						<controls:NumberBox
 							Grid.Row="1"
 							Grid.Column="1"
 							Width="62"
 							Height="23"
-							Margin="8 0 0 0"
+							Margin="8,0,0,0"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Center"
 							AllowEmpty="False"
 							AutomationProperties.Name="{x:Static res:EncodingRes.AverageBitrateRadioButton}"
-							IsEnabled="{Binding VideoEncodeRateType,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:VCVideoEncodeRateType.AverageBitrate}}"
+							IsEnabled="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.AverageBitrate}}"
 							Minimum="100"
-							Number="{Binding VideoBitrate,
-							                 Mode=TwoWay}"
+							Number="{Binding VideoBitrate, Mode=TwoWay}"
 							ShowIncrementButtons="False"
-							Visibility="{Binding VideoEncodeRateType,
-							                     Converter={StaticResource EnumVisibilityInverseConverter},
-							                     ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
+							Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityInverseConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
 
 						<RadioButton
 							Grid.Row="2"
@@ -298,9 +283,7 @@
 							VerticalAlignment="Center"
 							Content="{x:Static res:EncodingRes.ConstantQualityRadioButton}"
 							GroupName="VideoQuality"
-							IsChecked="{Binding VideoEncodeRateType,
-							                    Converter={StaticResource EnumBoolConverter},
-							                    ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}">
+							IsChecked="{Binding VideoEncodeRateType, Converter={StaticResource EnumBoolConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}">
 							<RadioButton.ToolTip>
 								<TextBlock Style="{StaticResource LargeToolTip}" Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" />
 							</RadioButton.ToolTip>
@@ -309,13 +292,11 @@
 							Grid.Row="2"
 							Grid.Column="1"
 							Orientation="Horizontal"
-							Visibility="{Binding VideoEncodeRateType,
-							                     Converter={StaticResource EnumVisibilityConverter},
-							                     ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}">
+							Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}">
 							<controls:NumberBox
 								Width="49"
 								Height="23"
-								Margin="8 0 0 0"
+								Margin="8,0,0,0"
 								HorizontalAlignment="Left"
 								VerticalAlignment="Center"
 								AllowEmpty="False"
@@ -323,14 +304,13 @@
 								Maximum="51"
 								Minimum="0"
 								Modulus="{Binding QualityModulus}"
-								Number="{Binding Quality,
-								                 Mode=TwoWay}">
+								Number="{Binding Quality, Mode=TwoWay}">
 								<controls:NumberBox.ToolTip>
 									<TextBlock Style="{StaticResource LargeToolTip}" Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" />
 								</controls:NumberBox.ToolTip>
 							</controls:NumberBox>
 							<TextBlock
-								Margin="6 0 0 0"
+								Margin="6,0,0,0"
 								VerticalAlignment="Center"
 								Text="{Binding QualityName}" />
 						</StackPanel>
@@ -338,29 +318,27 @@
 
 					<CheckBox
 						Grid.Column="1"
-						Margin="15 5 0 0"
+						Margin="15,5,0,0"
 						HorizontalAlignment="Left"
 						VerticalAlignment="Top"
 						Content="{x:Static res:EncodingRes.MultiPassEncodingCheckBox}"
 						IsChecked="{Binding MultiPass}"
-						Visibility="{Binding MultiPassVisible,
-						                     Converter={StaticResource VisibilityConverter}}" />
+						Visibility="{Binding MultiPassVisible, Converter={StaticResource VisibilityConverter}}" />
 					<CheckBox
 						Grid.Column="1"
-						Margin="36 26 0 0"
+						Margin="36,26,0,0"
 						HorizontalAlignment="Left"
 						VerticalAlignment="Top"
 						Content="{x:Static res:EncodingRes.TurboFirstPassCheckBox}"
 						IsChecked="{Binding TurboFirstPass}"
 						IsEnabled="{Binding TurboFirstPassEnabled}"
-						Visibility="{Binding TurboFirstPassVisible,
-						                     Converter={StaticResource VisibilityConverter}}" />
+						Visibility="{Binding TurboFirstPassVisible, Converter={StaticResource VisibilityConverter}}" />
 				</Grid>
 
 
 				<Slider
 					Height="22"
-					Margin="20 104 6 0"
+					Margin="20,104,6,0"
 					VerticalAlignment="Top"
 					AutomationProperties.Name="{x:Static res:EncodingRes.ConstantQualityRadioButton}"
 					IsSnapToTickEnabled="True"
@@ -368,9 +346,7 @@
 					Minimum="{Binding QualitySliderMin}"
 					TickFrequency="1"
 					TickPlacement="BottomRight"
-					Visibility="{Binding VideoEncodeRateType,
-					                     Converter={StaticResource EnumVisibilityConverter},
-					                     ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}"
+					Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}"
 					Value="{Binding Quality}">
 					<Slider.ToolTip>
 						<TextBlock Style="{StaticResource LargeToolTip}" Text="{x:Static res:EncodingRes.Video_QualityTargetToolTip}" />
@@ -378,24 +354,20 @@
 				</Slider>
 				<TextBlock
 					Height="21"
-					Margin="20 132 0 0"
+					Margin="20,132,0,0"
 					HorizontalAlignment="Left"
 					VerticalAlignment="Top"
 					Text="{Binding QualitySliderLeftText}"
 					TextAlignment="Left"
-					Visibility="{Binding VideoEncodeRateType,
-					                     Converter={StaticResource EnumVisibilityConverter},
-					                     ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
+					Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
 				<TextBlock
 					Height="21"
-					Margin="0 132 6 0"
+					Margin="0,132,6,0"
 					HorizontalAlignment="Right"
 					VerticalAlignment="Top"
 					Text="{Binding QualitySliderRightText}"
 					TextAlignment="Right"
-					Visibility="{Binding VideoEncodeRateType,
-					                     Converter={StaticResource EnumVisibilityConverter},
-					                     ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
+					Visibility="{Binding VideoEncodeRateType, Converter={StaticResource EnumVisibilityConverter}, ConverterParameter={x:Static model:VCVideoEncodeRateType.ConstantQuality}}" />
 
 			</Grid>
 		</Grid>
@@ -403,7 +375,7 @@
 		<!--  Encoder settings  -->
 		<Grid
 			Grid.Row="1"
-			Margin="0 12 0 0"
+			Margin="0,12,0,0"
 			Style="{StaticResource LongToolTipHolder}">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
@@ -411,13 +383,13 @@
 			</Grid.RowDefinitions>
 			<TextBlock
 				Grid.Row="0"
-				Margin="7 7 0 0"
+				Margin="7,7,0,0"
 				HorizontalAlignment="Left"
 				VerticalAlignment="Top"
 				Style="{StaticResource SectionHeader}"
 				Text="{x:Static res:EncodingRes.EncoderSettings}" />
 
-			<Grid Grid.Row="1" Margin="16 0 8 6">
+			<Grid Grid.Row="1" Margin="16,0,8,6">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition />
@@ -425,11 +397,10 @@
 				<!--  Preset  -->
 				<Grid
 					Grid.Row="0"
-					Margin="0 7 10 0"
+					Margin="0,7,10,0"
 					HorizontalAlignment="Stretch"
 					VerticalAlignment="Top"
-					Visibility="{Binding PresetVisible,
-					                     Converter={StaticResource VisibilityConverter}}">
+					Visibility="{Binding PresetVisible, Converter={StaticResource VisibilityConverter}}">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto" />
 						<ColumnDefinition />
@@ -451,8 +422,7 @@
 						Minimum="0"
 						Style="{StaticResource LongToolTipHolder}"
 						TickPlacement="BottomRight"
-						Value="{Binding PresetIndex,
-						                Mode=TwoWay}" />
+						Value="{Binding PresetIndex, Mode=TwoWay}" />
 					<TextBlock
 						Grid.Column="2"
 						MinWidth="150"
@@ -469,13 +439,12 @@
 					<StackPanel Grid.Column="0" Orientation="Vertical">
 						<!--  Tune  -->
 						<StackPanel
-							Margin="0 4 10 0"
+							Margin="0,4,10,0"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							Orientation="Horizontal"
 							Style="{StaticResource LongToolTipHolder}"
-							Visibility="{Binding TuneVisible,
-							                     Converter={StaticResource VisibilityConverter}}">
+							Visibility="{Binding TuneVisible, Converter={StaticResource VisibilityConverter}}">
 							<StackPanel.ToolTip>
 								<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.X264TuneToolTip}" />
 							</StackPanel.ToolTip>
@@ -487,7 +456,7 @@
 							<ComboBox
 								Height="23"
 								MinWidth="120"
-								Margin="6 0 0 0"
+								Margin="6,0,0,0"
 								VerticalContentAlignment="Center"
 								AutomationProperties.LabeledBy="{Binding ElementName=tuneLabel}"
 								ItemsSource="{Binding TuneChoices}"
@@ -497,13 +466,12 @@
 
 						<!--  Profile  -->
 						<StackPanel
-							Margin="0 4 10 0"
+							Margin="0,4,10,0"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							Orientation="Horizontal"
 							Style="{StaticResource LongToolTipHolder}"
-							Visibility="{Binding ProfileVisible,
-							                     Converter={StaticResource VisibilityConverter}}">
+							Visibility="{Binding ProfileVisible, Converter={StaticResource VisibilityConverter}}">
 							<StackPanel.ToolTip>
 								<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.ProfileToolTip}" />
 							</StackPanel.ToolTip>
@@ -515,7 +483,7 @@
 							<ComboBox
 								Height="23"
 								MinWidth="120"
-								Margin="6 0 0 0"
+								Margin="6,0,0,0"
 								VerticalContentAlignment="Center"
 								AutomationProperties.LabeledBy="{Binding ElementName=profileLabel}"
 								ItemsSource="{Binding ProfileChoices}"
@@ -525,13 +493,12 @@
 
 						<!--  Level  -->
 						<StackPanel
-							Margin="0 4 10 0"
+							Margin="0,4,10,0"
 							HorizontalAlignment="Left"
 							VerticalAlignment="Top"
 							Orientation="Horizontal"
 							Style="{StaticResource LongToolTipHolder}"
-							Visibility="{Binding LevelVisible,
-							                     Converter={StaticResource VisibilityConverter}}">
+							Visibility="{Binding LevelVisible, Converter={StaticResource VisibilityConverter}}">
 							<StackPanel.ToolTip>
 								<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.LevelToolTip}" />
 							</StackPanel.ToolTip>
@@ -543,7 +510,7 @@
 							<ComboBox
 								Height="23"
 								MinWidth="120"
-								Margin="6 0 0 0"
+								Margin="6,0,0,0"
 								VerticalContentAlignment="Center"
 								AutomationProperties.LabeledBy="{Binding ElementName=levelLabel}"
 								ItemContainerStyle="{StaticResource GrayNonCompatible}"
@@ -567,27 +534,18 @@
 							Orientation="Horizontal">
 							<CheckBox
 								MinWidth="120"
-								Margin="0 8 0 0"
+								Margin="0,8,0,0"
 								VerticalAlignment="Top"
 								Content="{x:Static res:EncodingRes.Tune_fastdecode}"
 								IsChecked="{Binding FastDecode}"
-								Visibility="{Binding TuneVisible,
-								                     Converter={StaticResource VisibilityConverter}}" />
-							<CheckBox
-								MinWidth="120"
-								Margin="0 8 0 0"
-								VerticalAlignment="Top"
-								Content="{x:Static res:EncodingRes.QsvDecodingLabel}"
-								IsChecked="{Binding QsvDecode}"
-								Visibility="{Binding QsvSettingsVisible,
-								                     Converter={StaticResource VisibilityConverter}}" />
+								Visibility="{Binding TuneVisible, Converter={StaticResource VisibilityConverter}}" />
 						</StackPanel>
 
 
 						<!--  Additional options string  -->
 						<Grid
 							Grid.Row="1"
-							Margin="0 8 0 0"
+							Margin="0,8,0,0"
 							HorizontalAlignment="Stretch"
 							VerticalAlignment="Stretch">
 							<Grid.RowDefinitions>
@@ -601,7 +559,7 @@
 
 							<TextBlock
 								Name="moreSettingsLabel"
-								Margin="0 0 6 0"
+								Margin="0,0,6,0"
 								HorizontalAlignment="Left"
 								VerticalAlignment="Center"
 								Text="{x:Static res:EncodingRes.MoreSettingsLabel}" />
@@ -609,30 +567,26 @@
 								Grid.Row="0"
 								Grid.Column="1"
 								AutomationProperties.LabeledBy="{Binding ElementName=moreSettingsLabel}"
-								Text="{Binding VideoOptions,
-								               UpdateSourceTrigger=PropertyChanged}"
+								Text="{Binding VideoOptions, UpdateSourceTrigger=PropertyChanged}"
 								TextWrapping="Wrap"
 								ToolTip="{x:Static res:EncodingRes.MoreOptionsToolTip}" />
 
 							<TextBlock
 								Grid.Row="1"
 								Grid.Column="0"
-								Margin="0 4 6 0"
+								Margin="0,4,6,0"
 								VerticalAlignment="Center"
 								Text="{x:Static res:EncodingRes.FullEncoderParameterLabel}"
-								Visibility="{Binding X264SettingsVisible,
-								                     Converter={StaticResource VisibilityConverter}}" />
+								Visibility="{Binding X264SettingsVisible, Converter={StaticResource VisibilityConverter}}" />
 							<TextBox
 								Grid.Row="1"
 								Grid.Column="1"
-								Margin="0 4 0 0"
+								Margin="0,4,0,0"
 								Background="{DynamicResource AlternateBackgroundBrush}"
 								IsReadOnly="True"
-								Text="{Binding FullParameterList,
-								               Mode=OneWay}"
+								Text="{Binding FullParameterList, Mode=OneWay}"
 								TextWrapping="Wrap"
-								Visibility="{Binding X264SettingsVisible,
-								                     Converter={StaticResource VisibilityConverter}}" />
+								Visibility="{Binding X264SettingsVisible, Converter={StaticResource VisibilityConverter}}" />
 						</Grid>
 					</Grid>
 				</Grid>
